Perkin-UAT/force-app/main/default/objects/Case/fields/CR_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>CR_Status_Formula__c</fullName>
    <formula>IF(ISPICKVAL(DX_CR_Status__c,&#39;&#39;),&#39;CRs Not Started&#39;,&#39;CRs InProgress&#39;)</formula>
    <label>CR Status Formula</label>
    <type>Text</type>
</CustomField>