Perkin-UAT/force-app/main/default/objects/Case/fields/Custom_Category__c.field-meta.xml
<CustomField>
    <fullName>Custom_Category__c</fullName>
    <description>Used for Informatics Managed Services</description>
    <label>Custom Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Platform/Infrastructure/System Down</fullName>
            </value>
            <value>
                <fullName>Access or Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>