Perkin-UAT/force-app/main/default/objects/Case/fields/Customer_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Q-Customer Complaint</description>
    <label>Customer Complaint</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quality_Priority_Calculation__c.Name</field>
            <operation>equals</operation>
            <value>Complaint</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quality_Priority_Calculation__c</referenceTo>
    <relationshipLabel>Complaint</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>