Perkin-UAT/force-app/main/default/objects/Case/fields/Describe_why_no_investigation__c.field-meta.xml
<CustomField>
    <fullName>Describe_why_no_investigation__c</fullName>
    <label>Describe why no investigation:</label>
    <type>TextArea</type>
</CustomField>