Perkin-UAT/force-app/main/default/objects/Case/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <label>Description Notes 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>