Perkin-UAT/force-app/main/default/objects/Case/fields/Dispute_Creator__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Creator__c</fullName>
    <label>Dispute Creator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>