Perkin-UAT/force-app/main/default/objects/Case/fields/Dispute_Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Internal_Notes__c</fullName>
    <label>Dispute Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>