Perkin-UAT/force-app/main/default/objects/Case/fields/Dispute_Payer__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Payer__c</fullName>
    <label>Dispute Payer Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>