Perkin-UAT/force-app/main/default/objects/Case/fields/Dispute_Payer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Payer_Number__c</fullName>
    <label>Dispute Payer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>