Perkin-UAT/force-app/main/default/objects/Case/fields/Dispute_Sold_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Sold_to_Number__c</fullName>
    <label>Dispute Sold to Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>