Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Actual_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>DX_Actual_Work_Hours__c</fullName>
    <label>Actual Work Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>