Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Assay__c.field-meta.xml
<CustomField>
    <fullName>DX_Assay__c</fullName>
    <label>Assay</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>DX_Platform__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>17-OHP</fullName>
            </value>
            <value>
                <fullName>25-OH Vitamin D EQ 6411</fullName>
                <label>25-OH Vitamin D (EQ 6411)</label>
            </value>
            <value>
                <fullName>6 BIOCHIP IFA Slides</fullName>
            </value>
            <value>
                <fullName>9 Biochip IFA Slides</fullName>
            </value>
            <value>
                <fullName>aCGH reagents</fullName>
            </value>
            <value>
                <fullName>ANA HEp-20-10 IFA</fullName>
            </value>
            <value>
                <fullName>ANA IFA 40</fullName>
            </value>
            <value>
                <fullName>ANA Profile 3 plus DFS70 IgG</fullName>
            </value>
            <value>
                <fullName>ANA Screen dsDNA IgG</fullName>
            </value>
            <value>
                <fullName>ANCA Mosaic 13</fullName>
            </value>
            <value>
                <fullName>ANCA Profile PR3, MPO IgG</fullName>
            </value>
            <value>
                <fullName>Anti-B. Bburg US EUROLINE-WB IgM (DY 2133-1 M)</fullName>
            </value>
            <value>
                <fullName>Anti-B. burg US WESTERNBLOT IgG (DY 2133 G)</fullName>
            </value>
            <value>
                <fullName>Antibodies against Neuronal Angtigens IgG (DL 1111 #G)</fullName>
            </value>
            <value>
                <fullName>Anti-Chlamydia MIF IgG (FI 2191-2010-3 G)</fullName>
            </value>
            <value>
                <fullName>Anti-Chlamydia MIF IgM (FI 2191-2010-3 M)</fullName>
            </value>
            <value>
                <fullName>Anti-Chlamydia MIF lgA (FI 2191-2010-80 A)</fullName>
            </value>
            <value>
                <fullName>Anti-Glutamate Receptor NMDA</fullName>
            </value>
            <value>
                <fullName>Anti-SARS-CoV-2 IgG</fullName>
            </value>
            <value>
                <fullName>Anti-THSD7A</fullName>
            </value>
            <value>
                <fullName>Autoimm Encephalitis Mosaic 1</fullName>
            </value>
            <value>
                <fullName>Autoimm Encephalitis Mosaic 12</fullName>
            </value>
            <value>
                <fullName>Autoimm Inflam Myopathies 16 Ag</fullName>
            </value>
            <value>
                <fullName>Autoimm Inflam Myopathies IgG</fullName>
            </value>
            <value>
                <fullName>Autoimmune Inflammatory Myopathies 16 Ag IgG (DL 1530-4 G)</fullName>
            </value>
            <value>
                <fullName>B. abortus IgG</fullName>
            </value>
            <value>
                <fullName>B. abortus IgM</fullName>
            </value>
            <value>
                <fullName>B. henselae/quintana IgG</fullName>
            </value>
            <value>
                <fullName>B. henselae/quintana IgM</fullName>
            </value>
            <value>
                <fullName>Biotinidase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>