Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Billing__c.field-meta.xml
<CustomField>
    <fullName>DX_Billing__c</fullName>
    <description>Used to record billing category of the Software Services change request.(Jira ITSFDC-4753)</description>
    <inlineHelpText>Indicates the revenue impact of the change</inlineHelpText>
    <label>Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free of charge</fullName>
            </value>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Indirect revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>