Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>DX_Change_Request__c</fullName>
    <label>Change Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>