Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_Closed_Status__c</fullName>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed/Resolved</fullName>
            </value>
            <value>
                <fullName>Verified/Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Forwarded</fullName>
            </value>
            <value>
                <fullName>Forwarded for Local Support</fullName>
            </value>
            <value>
                <fullName>Resolved Externally</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>