Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Complaint__c.field-meta.xml
<CustomField>
    <fullName>DX_Complaint__c</fullName>
    <label>Complaint?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>