Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Complaint_Justification__c.field-meta.xml
<CustomField>
    <fullName>DX_Complaint_Justification__c</fullName>
    <inlineHelpText>(no patient result consequences)</inlineHelpText>
    <label>Internal Complaint Justification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Human error of PKI representative</fullName>
            </value>
            <value>
                <fullName>Software product related complaint</fullName>
            </value>
            <value>
                <fullName>Software configuration related complaint</fullName>
            </value>
            <value>
                <fullName>Unexpected customer use of product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>