Perkin-UAT/force-app/main/default/objects/Case/fields/DX_CR_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>DX_CR_Date_Signed__c</fullName>
    <description>Used to record the date when the customer has signed the Software Services change request form.(JIRA ITSFDC-4753)</description>
    <inlineHelpText>Date when the customer approved requirements by signing the change request form</inlineHelpText>
    <label>CR Date Signed</label>
    <type>Date</type>
</CustomField>