Perkin-UAT/force-app/main/default/objects/Case/fields/DX_CR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_CR_Due_Date__c</fullName>
    <description>Used to record when the customer is expecting to receive the change.(Jira ITSFDC-4753)</description>
    <inlineHelpText>Date when the customer is expecting to receive the change</inlineHelpText>
    <label>CR Due Date</label>
    <type>Date</type>
</CustomField>