Perkin-UAT/force-app/main/default/objects/Case/fields/DX_CR_Due_Date_is_Hard_Deadline__c.field-meta.xml
<CustomField>
    <fullName>DX_CR_Due_Date_is_Hard_Deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to record whether the due date can be negotiated,(Jira ITSFDC-4753)</description>
    <inlineHelpText>Indicates that due date cannot be postponed</inlineHelpText>
    <label>CR Due Date is Hard Deadline</label>
    <type>Checkbox</type>
</CustomField>