Perkin-UAT/force-app/main/default/objects/Case/fields/DX_CR_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_CR_Go_Live_Date__c</fullName>
    <description>Used to record when the Software Services change request was promoted to the production (Jira ITSFDC-4753)</description>
    <inlineHelpText>Date when the change request was promoted to the production</inlineHelpText>
    <label>CR Go-Live Date</label>
    <type>Date</type>
</CustomField>