Perkin-UAT/force-app/main/default/objects/Case/fields/DX_CR_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_CR_Status__c</fullName>
    <label>CR Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requirements Gathering</fullName>
            </value>
            <value>
                <fullName>In Analysis</fullName>
            </value>
            <value>
                <fullName>Preparing Response</fullName>
            </value>
            <value>
                <fullName>Pending Customer Approval</fullName>
            </value>
            <value>
                <fullName>Ready to Assign to Engineer</fullName>
            </value>
            <value>
                <fullName>In Progress with Engineer</fullName>
            </value>
            <value>
                <fullName>Pending Deployment (Turku DSS)</fullName>
            </value>
            <value>
                <fullName>Customer Validating</fullName>
            </value>
            <value>
                <fullName>Pending Go-Live (Akron DSS)</fullName>
            </value>
            <value>
                <fullName>Go-Live (Akron DSS)</fullName>
            </value>
            <value>
                <fullName>Customer Approves Requirements</fullName>
            </value>
            <value>
                <fullName>Customer Acceptance Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>