Perkin-UAT/force-app/main/default/objects/Case/fields/DX_CRF_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_CRF_Status__c</fullName>
    <label>CRF Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Customer Signoff</fullName>
            </value>
            <value>
                <fullName>Execution Phase InProgress</fullName>
            </value>
            <value>
                <fullName>Done/Posted to SharePoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>