Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>DX_Date_Closed__c</fullName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>