Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Date_Started__c.field-meta.xml
<CustomField>
    <fullName>DX_Date_Started__c</fullName>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>