Perkin-UAT/force-app/main/default/objects/Case/fields/Dx_EMEA_L2_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Dx_EMEA_L2_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dx_EMEA_L2 Transferred</label>
    <type>Checkbox</type>
</CustomField>