Perkin-UAT/force-app/main/default/objects/Case/fields/DX_EMEA_Reaction_Time__c.field-meta.xml
<CustomField>
    <fullName>DX_EMEA_Reaction_Time__c</fullName>
    <formula>IF(ISNULL(DX_EMEA_Case_Assigned__c),
   null,
   (DX_EMEA_Case_Assigned__c  - CreatedDate) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reaction Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>