Perkin-UAT/force-app/main/default/objects/Case/fields/Dx_EMEA_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Dx_EMEA_Resolution_Time__c</fullName>
    <formula>IF(ISNULL(ClosedDate),null,(ClosedDate -  DX_EMEA_Case_Assigned__c)* 24)</formula>
    <label>Case Resolution Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>