Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Engineer2__c.field-meta.xml
<CustomField>
    <fullName>DX_Engineer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer2</relationshipName>
    <type>Lookup</type>
</CustomField>