Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Engineer3__c.field-meta.xml
<CustomField>
    <fullName>DX_Engineer3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer3</relationshipName>
    <type>Lookup</type>
</CustomField>