Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Engineer4__c.field-meta.xml
<CustomField>
    <fullName>DX_Engineer4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer4</relationshipName>
    <type>Lookup</type>
</CustomField>