Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Estimated_Effort_in_Days__c.field-meta.xml
<CustomField>
    <fullName>DX_Estimated_Effort_in_Days__c</fullName>
    <description>Used to record the estimated work effort of the Software Services change requests.(Jira ITSDC-4753)</description>
    <inlineHelpText>Work effort required to complete the change request</inlineHelpText>
    <label>Estimated Effort in Days</label>
    <length>10</length>
    <type>Text</type>
</CustomField>