Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Estimated_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Estimated_Target_Date__c</fullName>
    <label>Estimated Target Date</label>
    <type>Date</type>
</CustomField>