Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Estimated_Workload__c.field-meta.xml
<CustomField>
    <fullName>DX_Estimated_Workload__c</fullName>
    <label>Estimated Workload</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>