Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Issue_Type__c</fullName>
    <label>DX Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assisted Engineer</fullName>
            </value>
            <value>
                <fullName>Assisted Engineer Administrative</fullName>
            </value>
            <value>
                <fullName>Assisted Engineer Technical</fullName>
            </value>
            <value>
                <fullName>Customer: Additional Training Needed or Requested</fullName>
            </value>
            <value>
                <fullName>Customer: Expectation/Feedback/Observation</fullName>
            </value>
            <value>
                <fullName>Customer: General inquiry</fullName>
            </value>
            <value>
                <fullName>Customer: User Error</fullName>
            </value>
            <value>
                <fullName>Instrument Setup/Optimization</fullName>
            </value>
            <value>
                <fullName>IQ/OQ</fullName>
            </value>
            <value>
                <fullName>Logistic Issue</fullName>
            </value>
            <value>
                <fullName>Lost Plates</fullName>
            </value>
            <value>
                <fullName>Missing Reagents or Consumables</fullName>
            </value>
            <value>
                <fullName>Onsite Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Part Number Assistance</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Price Inquiry Customer</fullName>
            </value>
            <value>
                <fullName>Price Inquiry Sales</fullName>
            </value>
            <value>
                <fullName>Price Inquiry Service</fullName>
            </value>
            <value>
                <fullName>Product Defect</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Reallocate to other Business</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Software Problem Escalation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>