Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Platform__c.field-meta.xml
<CustomField>
    <fullName>DX_Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agilent BioAnalyser</fullName>
            </value>
            <value>
                <fullName>AlphaLisa</fullName>
            </value>
            <value>
                <fullName>Alpha SureFire</fullName>
            </value>
            <value>
                <fullName>AutoDELFIA</fullName>
            </value>
            <value>
                <fullName>Celigo</fullName>
            </value>
            <value>
                <fullName>Cellaca</fullName>
            </value>
            <value>
                <fullName>Cellaca PLX</fullName>
            </value>
            <value>
                <fullName>Cellometer Auto2000</fullName>
            </value>
            <value>
                <fullName>Cellometer AutoT4</fullName>
            </value>
            <value>
                <fullName>Cellometer K2</fullName>
            </value>
            <value>
                <fullName>Chemagic 360</fullName>
            </value>
            <value>
                <fullName>Chemagic MSMI</fullName>
            </value>
            <value>
                <fullName>Chemagic Prepito</fullName>
            </value>
            <value>
                <fullName>Chemagic Prime</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>DBS Puncher</fullName>
            </value>
            <value>
                <fullName>Delfia</fullName>
            </value>
            <value>
                <fullName>DELFIA Trio</fullName>
            </value>
            <value>
                <fullName>DELFIA Xpress</fullName>
            </value>
            <value>
                <fullName>ELISA Alliance HIV</fullName>
            </value>
            <value>
                <fullName>Eonis</fullName>
            </value>
            <value>
                <fullName>Eonis Q</fullName>
            </value>
            <value>
                <fullName>EP3</fullName>
            </value>
            <value>
                <fullName>EUROBlot Master</fullName>
            </value>
            <value>
                <fullName>EUROBLot One</fullName>
            </value>
            <value>
                <fullName>EUROIMMUN Analyzer</fullName>
            </value>
            <value>
                <fullName>EUROIMMUN Microarray Scanner</fullName>
            </value>
            <value>
                <fullName>EUROLab Workstation ELISA</fullName>
            </value>
            <value>
                <fullName>EUROLab Workstation IFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>