Perkin-UAT/force-app/main/default/objects/Case/fields/Dx_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Dx_Queue_Email__c</fullName>
    <formula>IF(LEFT( OwnerId, 3) = &#39;00G&#39;,Owner:Queue.QueueEmail,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dx_Queue Email</label>
    <type>Text</type>
</CustomField>