Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Resolution__c.field-meta.xml
<CustomField>
    <fullName>DX_Resolution__c</fullName>
    <description>Capture case resolution notes by diagnostics team</description>
    <label>Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>