Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Resolution_Date__c</fullName>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>