Perkin-UAT/force-app/main/default/objects/Case/fields/DX_Service_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>DX_Service_Order_Number__c</fullName>
    <label>Service Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>