Perkin-UAT/force-app/main/default/objects/Case/fields/Elapsed_time_to_close__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_time_to_close__c</fullName>
    <label>Elapsed time to close</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 day</fullName>
                <default>true</default>
                <label>1 day</label>
            </value>
            <value>
                <fullName>&gt;1 day&lt;7 days</fullName>
            </value>
            <value>
                <fullName>&gt;7 days&lt;30 days</fullName>
            </value>
            <value>
                <fullName>&gt;30 days&lt;60 days</fullName>
            </value>
            <value>
                <fullName>&gt;60 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>