Perkin-UAT/force-app/main/default/objects/Case/fields/email_body_draft__c.field-meta.xml
<CustomField>
    <fullName>email_body_draft__c</fullName>
    <description>This is the rich text text field used by AI to put a premade email message that is later copied to an email message. (i.e a Draft)</description>
    <inlineHelpText>This is the rich text text field used by AI to put a premade email message that is later copied to an email message. (i.e a Draft)</inlineHelpText>
    <label>email body draft</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>