Perkin-UAT/force-app/main/default/objects/Case/fields/Entitlement_End__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_End__c</fullName>
    <formula>Entitlement.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement End</label>
    <type>Date</type>
</CustomField>