Perkin-UAT/force-app/main/default/objects/Case/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <formula>IF( Entitlement_End__c   &lt;=    DATEVALUE( CreatedDate ) , &quot;No Coverage&quot;, &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status is calculated to be Active if the Case was created before the Entitlement End Date.</inlineHelpText>
    <label>Entitlement Status</label>
    <type>Text</type>
</CustomField>