Perkin-UAT/force-app/main/default/objects/Case/fields/Exclude_in_Reports__c.field-meta.xml
<CustomField>
    <fullName>Exclude_in_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude in Reports</label>
    <type>Checkbox</type>
</CustomField>