Perkin-UAT/force-app/main/default/objects/Case/fields/External_Email_Inbox__c.field-meta.xml
<CustomField>
    <fullName>External_Email_Inbox__c</fullName>
    <label>External Email Inbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>